fix(launcher/StatusPage): add text-wrap balance

--- a/apps/telegram-launcher/src/components/StatusPage/StatusPage.scss
+++ b/apps/telegram-launcher/src/components/StatusPage/StatusPage.scss
@@ -58,6 +58,7 @@ $errorIconShift: translate(20%, 20%);
 
   &__content {
     text-align: center;
+    text-wrap: balance;
     animation: status-page-content-appear 200ms ease forwards;
   }
 
